--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,10 @@
+# The requirements have been updated from original ERAN to migrate to python3.8
 numpy
-tensorflow
-onnx==1.5.0
+tensorflow~=2.4.1
+onnx~=1.8.0
 pycddlib
 tqdm
-onnxruntime
+onnxruntime>=1.7.0
 torch
 torchvision
 mpmath
